[package]
name = "rust-dnd-server"
version = "0.1.0"
authors = ["Matt Long <matthewhl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-files = "0.2.1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"